--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^19.0.0",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^19.0.0",
+    "reactflow": "^11.11.4",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
