--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/genai": "^0.7.0",
     "@google/generative-ai": "^0.24.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-hover-card": "^1.1.6",
@@ -58,10 +59,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/Avadhoot1905/study-resource-allocator/issues"
   },
-  "homepage": "https://github.com/Avadhoot1905/study-resource-allocator#readme",
-  "type" : "module"
+  "homepage": "https://github.com/Avadhoot1905/study-resource-allocator#readme"
 }
